fix: overflow auto

--- a/src/pages/about-us/about-us.module.css
+++ b/src/pages/about-us/about-us.module.css
@@ -1,8 +1,6 @@
 .wrapper {
-  position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   padding: 5px;
 
@@ -16,6 +14,8 @@
   text-align: left;
   text-indent: 3rem;
   color: #5b2467;
+
+  overflow-y: auto;
 }
 
 .text {
@@ -26,4 +26,5 @@
 .title {
   text-align: center;
   font-size: 3.6rem;
+  margin-top: 2rem;
 }
